--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
         <nav>
             <ul>
                 <li>View Highscores</li>
-                <li>Time: </li>
+                <li id="time"></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Questions will be here</h1>
-        <ol>
-            <li><button>Answer 1</button></li>
-            <li><button>Answer 2</button></li>
-            <li><button>Answer 3</button></li>
-            <li><button>Answer 4</button></li>
-        </ol>
-        <h2>right or wrong</h2>
-
+        <!-- <div class="text" data-state = "hidden">
+            <h1 id="question"></h1>
+            <ol>
+                <li><button id="answer1"> </button></li>
+                <li><button id="answer2"> </button></li>
+                <li><button id="answer3"> </button></li>
+                <li><button id="answer4"></button></li>
+            </ol>
+            <h2>right or wrong</h2>
+        </div> -->
     </main>
     <script src="./assets/script.js"></script>  
 </body>
