--- a/index.html
+++ b/index.html
@@ -12,21 +12,12 @@
         <nav>
             <ul>
                 <li>View Highscores</li>
-                <li id="time"></li>
+                <li id="time">Time: </li>
             </ul>
         </nav>
     </header>
     <main>
-        <!-- <div class="text" data-state = "hidden">
-            <h1 id="question"></h1>
-            <ol>
-                <li><button id="answer1"> </button></li>
-                <li><button id="answer2"> </button></li>
-                <li><button id="answer3"> </button></li>
-                <li><button id="answer4"></button></li>
-            </ol>
-            <h2>right or wrong</h2>
-        </div> -->
+       
     </main>
     <script src="./assets/script.js"></script>  
 </body>
