--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
         <nav>
             <ul>
                 <li>View Highscores</li>
-                <li id="time">Time: </li>
+                <li id="time"></li>
             </ul>
         </nav>
     </header>
     <main>
-       
+        <!-- <form id="form" data-state="hidden">
+            <p>
+                <label for="initials">Enter your Initials:</label>
+                <input type="text" id="score" placeholder="Initials" />
+            </p>
+            <button>Submit</button>
+        </form> -->
+           
     </main>
     <script src="./assets/script.js"></script>  
 </body>
